# 8do

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  gen_opcode.py  gen_rom.py
CPU/: CMakeLists.txt
CPU/include/CPU/: cpu.hpp  device.hpp  lib.hpp
CPU/include/CPU/devices/: ram.hpp  rom.hpp
CPU/src/: cpu.cpp  cpu_instructions.cpp
common/: CMakeLists.txt
common/include/8do/: ansi.hpp  common.hpp
devices/include/8do/: device.hpp  devices.hpp  ram.hpp  rom.hpp  stdout.hpp  video.hpp
doc/: 8do.md  cpu.md  eightdo.md  helpful.md
include/8do/: 8do.hpp  bus.hpp  cpu.hpp  debug_menu.hpp
src/: main.cpp
src/8do/: cpu.cpp  cpu_instructions.cpp
